# rust-react-app-hello-world

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml  index.html  index2.html  sample_page.html
.cargo/: config.toml  test-config.toml
.github/workflows/: rust.yml
.sqlx/: query-011b7bfd8d8db7e3d13179d4c93dbb0b37af95a60f9ad56e739d8e66400477f1.json  query-26cb47ad4512499eec202c59fcd02655d615c62b81a2f1a5caf8530203eda0b0.json  query-42f5ae926c939d7aed2856d5c7471bf7cbfbfa3a24d45906c4b54f746ef44f39.json  query-6161588bbac5dc1474fa483880fa83adca3f019c53a3d5a4ce745d371fefa1c0.json  query-75011b3472d735d93912749b370b6cf6c49d925c153666b596b68d7bc38175c1.json  query-798b1a73e0499c1c05cd93dd243c50536f81e8a22aceca644eff1285098351bc.json
migrations/: 20240813050718_init.down.sql  20240813050718_init.up.sql  20240814021423_seeding_player_data.down.sql  20240814021423_seeding_player_data.up.sql
my-react-ts-app/: .env  eslint.config.mjs  package-lock.json  package.json
my-react-ts-app/public/: index.html
my-react-ts-app/src/: App.css  App.tsx  constants.js  constants.ts
my-react-ts-app/src/components/: AddPlayer.tsx  BestTeamEver.tsx  Player.tsx  PlayerCreate.tsx  PlayerList.tsx  PlayerSearch.tsx  UesrList.tsx
my-react-ts-app/src/pages/: AddPlayerPage.tsx  HomePage.tsx  PageNotFoundPage.tsx  PlayerCreatePage.tsx  PlayerListPage.tsx  PlayerPage.tsx  PlayerSearchPage.tsx  UserListPage.tsx
src/: api.rs  environment_utils.rs  lib.rs  main.rs  services.rs  typescript.rs
src/api/: endpoints.rs  entities.rs  methods.rs  mod.rs  resources.rs
src/app_server/: mod.rs  server.rs  utils.rs
src/configs/: mod.rs  utils.rs
src/db/: db_utils.rs  mod.rs  utils.rs
src/environment_utils/: dev_and_test_utils.rs
src/services/: app_server.rs  configs.rs  db.rs  search.rs  tracing.rs
src/typescript/: runtime.js  ts_utils.rs
tests/: api_integration_tests.rs  integration_tests.rs
tests/test_utils/: mod.rs
ts_scripts/: example.ts
