[package]
name = "react_app_hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.0" , features = ["tokio", "http1"] }
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls"] }
sqlx-cli = { version = "0.8.0", default-features = false, features = ["native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }

