[package]
name = "react_app_hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.0" , features = ["tokio", "http1", "tracing"] }
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
sqlx-cli = { version = "0.8.0", default-features = false, features = ["native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["compression-full", "decompression-full", "fs", "timeout", "trace"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.127"
axum-test = "15.6.0"

[dev-dependencies]
pretty_assertions = "1"
