[package]
name = "rust_react_app_hello_world" # Any change to the name must be mirrored in launch.json
version = "0.1.0"
edition = "2021"
default-run = "rust_react_app_hello_world"

[dependencies]
axum = { version = "0.7.0" , features = ["tokio", "http1", "tracing"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
sqlx-cli = { version = "0.8.0", default-features = false, features = ["native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["compression-full", "decompression-full", "fs", "timeout", "trace"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.127"
meilisearch-sdk = "0.27.1"
colored = "2.1.0"
lazy_static = "1.5.0"
config = "0.13.4"

[dev-dependencies]
pretty_assertions = "1"
axum-test = "15.6.0"
